# 0xSYNTH

./: .gitignore  CLAUDE.md  CMakeLists.txt  FEATURES.md  LICENSE  README.md  RELEASE_NOTES.md  RELEASE_NOTES_1.1.md
.githooks/: pre-commit
assets/: 0xsynth.icns
build-win64/: CTestTestfile.cmake
cmake/: mingw-w64-gui.cmake
openspec/changes/synth-engine-extraction/: README.md  design.md  proposal.md  tasks.md
openspec/changes/synth-engine-extraction/specs/effects-chain/: spec.md
openspec/changes/synth-engine-extraction/specs/fm-synthesis/: spec.md
openspec/changes/synth-engine-extraction/specs/gtk-frontend/: spec.md
openspec/changes/synth-engine-extraction/specs/parameter-system/: spec.md
openspec/changes/synth-engine-extraction/specs/plugin-clap/: spec.md
openspec/changes/synth-engine-extraction/specs/plugin-vst3/: spec.md
openspec/changes/synth-engine-extraction/specs/preset-management/: spec.md
openspec/changes/synth-engine-extraction/specs/sampler-engine/: spec.md
openspec/changes/synth-engine-extraction/specs/standalone-app/: spec.md
openspec/changes/synth-engine-extraction/specs/synth-api/: spec.md
openspec/changes/synth-engine-extraction/specs/synth-engine/: spec.md
openspec/changes/synth-engine-extraction/specs/ui-abstraction/: spec.md
openspec/changes/synth-engine-extraction/specs/wavetable-synthesis/: spec.md
presets/factory/: 303 Acid.json  ARP Lead.json  Analog Warmth.json  Bass.json  CS-80 Brass.json  Cinematic Drone.json  Crystal FM.json  DX Clav.json  DX Flute.json  DX Harm.json  DX Koto.json  DX Marimba.json  DX Organ.json  DX Piano.json  DX Sitar.json  DX Strings.json  DX Vibes.json  Dark Arp.json  Dark Bass.json  Dark Pad.json  Detuned Saw.json  Dirty Bass.json  Dogwater.json  Ethereal Pad.json  FM Bass.json  FM Bell.json  FM EPiano.json  FM Glasswork.json  FM Metal.json  FM Pad.json  Hoover.json  Init Saw.json  JP-8 Pad.json  Juno Pad.json  Lead.json  MS-20 Growl.json  Massive Lead.json  Moog Bass.json  OB Strings.json  Pad.json  (+32 more)
scripts/: build_test.sh  commit_push.sh  task_cycle.sh
scripts/packaging/: 0xsynth_installer.nsi  MACOS_RELEASE.md  package_release.sh
src/api/: synth_api.c  synth_api.h
src/engine/: arpeggiator.c  arpeggiator.h  audio_convert.c  audio_convert.h  command_queue.c  command_queue.h  crash_log.c  crash_log.h  dr_libs_impl.c  effects.c  effects.h  envelope.c  envelope.h  filter.c  filter.h  fm.c  fm.h  log.c  log.h  mod_matrix.c  mod_matrix.h  oscillator.c  oscillator.h  output_events.c  output_events.h  params.c  params.h  preset.c  preset.h  recorder.c  recorder.h  sampler.c  sampler.h  sequencer.c  sequencer.h  session.c  session.h  types.h  voice.c  voice.h  (+2 more)
src/gui_gtk/: gtk_app.c  gtk_app.h
src/gui_imgui/: imgui_app.cpp  imgui_app.h  imgui_widgets.cpp  imgui_widgets.h
src/plugin/: clap_exports.def  config.h  plugin.c  plugin_gui.cpp  plugin_gui.h  vst3_exports.def
src/standalone/: 0xsynth.rc  audio.c  audio.h  main.c  midi.c  midi.h
src/ui/: ui_layout.c  ui_types.h
tasks/: engine_tasks.json  frontend_tasks.json  infra_tasks.json  plugin_tasks.json  task_ops.sh
tests/: test_benchmark.c  test_effects.c  test_fm.c  test_foundation.c  test_midi_cc.c  test_preset_roundtrip.c  test_presets.c  test_sampler.c  test_sequencer.c  test_subtractive.c  test_ui_layout.c  test_wavetable.c
